tam/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tam-app
  labels:
    app.kubernetes.io/name: tam-app
    app.kubernetes.io/part-of: tam
